commit 0.83 Updated user functionality